--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
-# LangChain ecosystem (Version 0.3.x is recommended for stability)
-langchain>=0.3.0
-langchain-community>=0.3.0
-langchain-core>=0.3.0
-langchain-huggingface>=0.1.0
-langchain-text-splitters>=0.3.0
+# LangChain ecosystem (LOCKED for compatibility)
+langchain==0.3.2
+langchain-core==0.3.8
+langchain-community==0.3.2
+langchain-huggingface==0.1.2
+langchain-text-splitters==0.3.2
 
 # Vector Database
-chromadb>=0.5.0
+chromadb==0.5.5
 
 # Embedding Models
-sentence-transformers>=3.0.0
+sentence-transformers==3.0.1
+
+# Transformers & Torch (explicitly add these)
+transformers==4.46.0
+torch>=2.1.0
 
 # Data Manipulation
-pandas>=2.2.0
+pandas==2.2.2
