--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
-# LangChain ecosystem (LOCKED for compatibility)
-langchain==0.3.2
-langchain-core==0.3.8
-langchain-community==0.3.2
-langchain-huggingface==0.1.2
-langchain-text-splitters==0.3.2
+# LangChain ecosystem
+langchain>=0.3.2
+langchain-core>=0.3.8
+langchain-community>=0.3.2
+langchain-huggingface>=0.1.2
+langchain-text-splitters>=0.3.2
+langchain-chroma>=0.1.0
 
 # Vector Database
-chromadb==0.5.5
+chromadb>=0.6.0
 
 # Embedding Models
-sentence-transformers==3.0.1
+sentence-transformers>=3.0.1
 
-# Transformers & Torch (explicitly add these)
-transformers==4.46.0
+# Transformers & Torch (Qwen requires >=4.51.0)
+transformers>=4.51.0
 torch>=2.1.0
+accelerate>=0.26.0
+
+# HuggingFace Hub (for downloading Qwen model)
+huggingface_hub>=0.23.0
 
 # Data Manipulation
-pandas==2.2.2
+pandas>=2.2.2
